--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ h1,h3,h4
 	<b class="text-danger">NOTE : </b> IF CAR IS NOT VISIBLE PRESS ANY ARROW KEY
 </h4>
 
-	<!--- Create Canvas--->
+<canvas id ="myCanvas" width="800" height="600" ></canvas>
 
 
 </center>
